@@ -47,8 +47,8 @@ ICE_PATCH_API void createDirectory(const std::string&);
 
 ICE_PATCH_API Ice::ByteSeq getMD5(const std::string&);
 ICE_PATCH_API void putMD5(const std::string&, const Ice::ByteSeq&);
-ICE_PATCH_API void createMD5(const std::string&, const Ice::LoggerPtr& = 0);
-ICE_PATCH_API Ice::ByteSeq calcMD5(const std::string&, const Ice::LoggerPtr& = 0);
+ICE_PATCH_API void createMD5(const std::string&, bool, const Ice::LoggerPtr& = 0);
+ICE_PATCH_API Ice::ByteSeq calcMD5(const std::string&, bool, const Ice::LoggerPtr& = 0);
 ICE_PATCH_API Ice::ByteSeq calcPartialMD5(const std::string&, Ice::Int, const Ice::LoggerPtr& = 0);
 
 ICE_PATCH_API Ice::ByteSeq getBZ2(const std::string&, Ice::Int, Ice::Int);
